--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+@import "/src/App/components/Navbar/navbar.css";
+@import "/src/App/components/Hero/hero.css";
+@import "/src/App/components/About/about.css";
+@import "/src/App/components/Projects/projects.css";
+@import "/src/App/components/Certifications/certifications.css";
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
