--- a/src/App/components/Hero/hero.css
+++ b/src/App/components/Hero/hero.css
@@ -1,3 +1,8 @@
 .hero {
   border: 2px solid red;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
