basic layout done

--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,12 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background: rgb(36, 36, 36);
+  background: linear-gradient(
+    90deg,
+    rgba(13, 13, 13, 1) 33%,
+    rgba(0, 30, 37, 1) 75%
+  );
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
