--- a/src/App/components/Navbar/navbar.css
+++ b/src/App/components/Navbar/navbar.css
@@ -1,7 +1,29 @@
 .navbar {
-  border: 2px solid red;
+  /* border: 2px solid red; */
   position: sticky;
   top: 0;
-  display: box;
-  background-color: #242424;
+  display: flex;
+  background: rgb(13, 13, 13);
+  background: linear-gradient(
+    90deg,
+    rgba(13, 13, 13, 1) 33%,
+    rgba(0, 30, 37, 1) 75%
+  );
+  justify-content: space-between;
+  min-height: 5em;
+  -webkit-box-shadow: 0px 5px 5px 0px rgba(52, 52, 52, 1);
+  -moz-box-shadow: 0px 5px 5px 0px rgba(52, 52, 52, 1);
+  box-shadow: 0px 3px 7px 0px rgba(52, 52, 52, 1);
+}
+
+.nav-links {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: 2em;
+  gap: 1em;
+}
+
+.nav-links a {
+  color: #ddd;
 }
