--- a/src/App/components/Projects/projects.css
+++ b/src/App/components/Projects/projects.css
@@ -1,3 +1,8 @@
 .projects {
-  border: 2px solid red;
+  /* border: 2px solid red; */
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
