certifications added 'working on' section

--- a/src/App/components/Certifications/certifications.css
+++ b/src/App/components/Certifications/certifications.css
@@ -22,6 +22,10 @@
   max-width: 320px;
 }
 
+.cert-span {
+  color: aquamarine;
+}
+
 .cert-img:hover {
   animation: certZoom 1s ease 0s 1 normal forwards;
 }
