--- a/src/index.css
+++ b/src/index.css
@@ -36,11 +36,12 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #ddd;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #434343;
+  border-left: solid 2px #ddd;
 }
 
 body {
