--- a/src/App/components/Certifications/certifications.css
+++ b/src/App/components/Certifications/certifications.css
@@ -4,7 +4,7 @@
   height: 100vh;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
 }
 
@@ -19,9 +19,11 @@
 }
 
 .cert-img {
-  max-width: 320px;
+  max-width: 420px;
 }
-
+.cert-heading {
+  margin-top: 3em;
+}
 .cert-span {
   color: aquamarine;
 }
