--- a/src/App/components/Navbar/navbar.css
+++ b/src/App/components/Navbar/navbar.css
@@ -15,6 +15,15 @@
   -moz-box-shadow: 0px 5px 5px 0px rgba(52, 52, 52, 1);
   box-shadow: 0px 3px 7px 0px rgba(52, 52, 52, 1);
 }
+.socials {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 1em;
+  gap: 1em;
+  color: #ddd;
+  font-size: 2.5em;
+}
 
 .nav-links {
   display: flex;
