--- a/src/App/components/Projects/Project/project.css
+++ b/src/App/components/Projects/Project/project.css
@@ -7,11 +7,16 @@
   max-height: 480px;
   text-align: center;
 }
-
+.project-card a {
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 .project-card img {
   display: block;
   max-width: 80%;
-  /* max-height: 360px; */
+  max-height: 360px;
   object-fit: contain;
 }
 
