--- a/src/App/components/Navbar/navbar.css
+++ b/src/App/components/Navbar/navbar.css
@@ -24,7 +24,18 @@
   color: #ddd;
   font-size: 2.5em;
 }
-
+.nav-buttons {
+  display: flex;
+}
+.lang-buttons {
+  display: flex;
+}
+.lang-buttons button {
+  background-color: rgba(203, 220, 203, 0);
+}
+.country-flag svg {
+  width: 1.5em;
+}
 .nav-links {
   display: flex;
   justify-content: center;
