--- a/src/App/components/Navbar/navbar.css
+++ b/src/App/components/Navbar/navbar.css
@@ -3,6 +3,7 @@
   position: sticky;
   top: 0;
   display: flex;
+  width: 100%;
   background: rgb(13, 13, 13);
   background: linear-gradient(
     90deg,
@@ -16,6 +17,7 @@
   box-shadow: 0px 3px 7px 0px rgba(52, 52, 52, 1);
 }
 .socials {
+  /* border: 2px solid red; */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -26,6 +28,7 @@
 }
 .nav-buttons {
   display: flex;
+  display: contents;
 }
 .lang-buttons {
   display: flex;
@@ -46,4 +49,45 @@
 
 .nav-links a {
   color: #ddd;
+}
+
+.collapse {
+  display: none;
+}
+
+.nav-toggler {
+  position: absolute;
+  right: 0;
+  font-size: 2em;
+  display: none;
+}
+.nav-toggler button {
+  background-color: rgba(203, 220, 203, 0);
+}
+
+@media only screen and (max-width: 768px) {
+  .navbar {
+    flex-direction: column;
+    align-items: center;
+  }
+  .socials {
+    margin-right: 0.7em;
+    margin-top: 0.15em;
+  }
+  .nav-buttons {
+    flex-direction: column;
+    /* margin-left: 2em; */
+  }
+  .nav-links {
+    flex-direction: column;
+    margin-left: 1.5em;
+    font-size: 1.3em;
+  }
+  .lang-buttons {
+    margin: 0 auto;
+    /* margin-left: 0.2em; */
+  }
+  .nav-toggler {
+    display: block;
+  }
 }
