navbar fully responsive

--- a/src/App/components/Navbar/navbar.css
+++ b/src/App/components/Navbar/navbar.css
@@ -28,7 +28,12 @@
 }
 .nav-buttons {
   display: flex;
-  display: contents;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  height: 0;
+  overflow: hidden;
+  /* display: none; */
   transition: 0.3s ease-in-out all;
 }
 .lang-buttons {
@@ -77,9 +82,7 @@
   }
   .nav-buttons {
     flex-direction: column;
-    height: 5rem;
-    border: 2px solid red;
-    /* margin-left: 2em; */
+    /* border: 2px solid red; */
   }
   .nav-links {
     flex-direction: column;
