--- a/src/App/components/Hero/hero.css
+++ b/src/App/components/Hero/hero.css
@@ -25,6 +25,7 @@
 .hero-text2 {
   width: 80%;
   /* margin-top: 5rem; */
+  margin-left: 5rem;
 }
 .span1 {
   font-size: 2.2em;
@@ -34,4 +35,31 @@
 .span2 {
   font-size: 2.2em;
   font-style: italic;
+}
+
+@media only screen and (width < 980px) {
+  .hero-text1,
+  .hero-text2 {
+    font-size: 1.7em;
+  }
+}
+@media only screen and (width < 768px) {
+  .text-container {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-left: 2em;
+  }
+  .hero-text1,
+  .hero-text2 {
+    width: 50%;
+    margin: 0;
+  }
+
+  .hero-text2 {
+    margin-top: 1em;
+  }
 }
