--- a/src/App/components/Footer/footer.css
+++ b/src/App/components/Footer/footer.css
@@ -1,9 +1,12 @@
 .footer {
+  padding: 1em 0 0.7em 0;
   display: flex;
   align-items: center;
   justify-content: center;
+  box-shadow: 0px 0px 5px 3px rgb(42, 42, 42);
+  color: rgb(65, 65, 65);
 }
 .footer a {
-  padding: 0 0.2rem 0 0.2rem;
+  padding: 0 0.3rem 0 0.3rem;
   color: rgb(0, 151, 184);
 }
