--- a/src/App/components/About/about.css
+++ b/src/App/components/About/about.css
@@ -1,13 +1,32 @@
 .about {
-  /* border: 2px solid red; */
-  margin-top: 5em;
   min-width: 100%;
   min-height: 100vh;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  /* justify-content: center; */
   /* align-items: center; */
 }
 
 .about h1 {
-  margin-top: 5rem;
+  margin: 0 auto;
+}
+
+.about-container {
+  width: 80%;
+  margin: 0 auto;
+  margin-top: 3em;
+  padding-left: 1em;
+  display: flex;
+  gap: 2em;
+  flex-direction: column;
+  justify-content: center;
+  font-size: 2em;
+}
+
+@media only screen and (max-width: 768px) {
+  .about-container {
+    gap: 0.7em;
+    font-size: 1.6em;
+    margin-top: 1.5em;
+  }
 }
