--- a/src/App/components/Hero/hero.css
+++ b/src/App/components/Hero/hero.css
@@ -1,7 +1,7 @@
 .hero {
   /* border: 2px solid red; */
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -45,6 +45,9 @@
   }
 }
 @media only screen and (width < 768px) {
+  .hero {
+    margin-bottom: 4em;
+  }
   .text-container {
     width: 100%;
     height: 100%;
@@ -52,7 +55,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-left: 2em;
+    margin-left: -2em;
   }
   .hero-text1,
   .hero-text2 {
