--- a/src/App/components/Navbar/navbar.css
+++ b/src/App/components/Navbar/navbar.css
@@ -91,8 +91,9 @@
   }
   .lang-buttons {
     margin: 0 auto;
-    margin-top: 1em;
+    margin-top: 0.6em;
     /* margin-left: 0.2em; */
+    font-size: 1.5em;
   }
   .nav-toggler {
     display: block;
