--- a/src/App/components/Projects/Project/project.css
+++ b/src/App/components/Projects/Project/project.css
@@ -16,14 +16,10 @@
 }
 .project-card img {
   display: block;
-  max-width: 80%;
+  max-width: 100%;
   max-height: 360px;
   object-fit: contain;
   padding: 0.5em;
-}
-
-.project-card img:hover {
-  animation: certZoom 1s ease 0s 1 normal forwards;
 }
 
 .project-heading {
@@ -36,28 +32,22 @@
     max-height: 360px;
   }
 }
+@media only screen and (max-width: 768px) {
+  .project-card {
+    max-width: 460px;
+    max-height: 460px;
+  }
 
+  .project-card img:hover {
+    animation: disabled;
+  }
+}
 @keyframes certZoom {
   0% {
     transform: scale(1);
   }
 
   100% {
-    transform: scale(1.9);
-  }
-}
-@keyframes certZoomSmall {
-  0% {
-    transform: scale(1);
-  }
-
-  100% {
-    transform: scale(1.4);
-  }
-}
-
-@media only screen and (max-width: 1180px) {
-  .cert-img:hover {
-    animation: certZoomSmall 1s ease 0s 1 normal forwards;
+    transform: scale(1.3);
   }
 }
