--- a/src/App/components/Hero/hero.css
+++ b/src/App/components/Hero/hero.css
@@ -55,6 +55,21 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin-left: -3.5em;
+  }
+  .hero-text1,
+  .hero-text2 {
+    width: 50%;
+    margin: 0;
+    font-size: 1.6em;
+  }
+
+  .hero-text2 {
+    margin-top: 3em;
+  }
+}
+@media only screen and (width < 420px) {
+  .text-container {
     margin-left: -5em;
   }
   .hero-text1,
