--- a/src/App/components/Navbar/navbar.css
+++ b/src/App/components/Navbar/navbar.css
@@ -22,9 +22,12 @@
   justify-content: center;
   align-items: center;
   margin-left: 1em;
-  gap: 1em;
+  gap: 0.5em;
   color: #ddd;
   font-size: 2.5em;
+}
+.socials a {
+  padding: 5px;
 }
 .nav-buttons {
   display: flex;
@@ -50,11 +53,12 @@
   justify-content: center;
   align-items: center;
   margin-right: 2em;
-  gap: 1em;
+  gap: 0.5em;
 }
 
 .nav-links a {
   color: #ddd;
+  padding: 3px;
 }
 
 .collapse {
